Fixed html error (misplaced "</div>" causing preference dialogues to fail to display until igc file loaded Selection of task source on narrow screens now uses alternative display of radio buttons.

--- a/igcviewer.css
+++ b/igcviewer.css
@@ -92,7 +92,7 @@ div.container {
 }
 
 input[name="tasksource"] {
-    margin-right: 40px;
+
 }
 
 #setunits   select {
@@ -248,6 +248,11 @@ visibility: hidden;
      font-size: 2em;
  }
      
+input[name="tasksource"]  + label {
+    display:inline-block;
+    margin-right: 2em;
+}
+     
 #righthalf, #mapwrapper  {
 height:  80vh;
 min-height: 25vw;
@@ -303,6 +308,28 @@ button.toggle {
 }
  }
 @media screen and (max-width: 900px) {
+  label {
+      cursor: pointer;
+  }
+    
+input[name="tasksource"] {
+    display:none; 
+}
+
+input[name="tasksource"]  + label {
+    display:inline-block;
+    background-color:#ddd;
+    padding:4px 11px;
+    margin: 4px 4px;
+    font-family:Arial;
+    font-size:16px;
+}
+
+input[name="tasksource"]:checked + label { 
+    background-color:#bbb;
+}
+
+
     h1 {
      font-size: 2em;
  }
@@ -404,26 +431,50 @@ height: 45px;
 }
 
 div.colour {
-
+background: aqua;
 }
 
+input[type=radio]  {
+    height: 30px;
+}
 
 input[type=range]{
     -webkit-appearance: none;
 }
 
-input[type=range]::-webkit-slider-runnable-track {
-    height: 15px;
-    background: #ddd;
-     width: 30px;
-}
-
 input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
-    border: none;
+    border: 1px solid #000000;
+    border-radius: 3px;
     height: 36px;
-    width: 36px;
-    background: darkgrey;
+    width: 16px;
+    background: #ffffff;
     margin-top: -12px;
 }
+
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 9px;
+  cursor: pointer;
+  background: lightgray;
+  border: 0.2px solid #010101;
+}
+
+input[type=range]::-moz-range-thumb {
+  border: 1px solid #000000;
+  height: 36px;
+  width: 16px;
+  border-radius: 3px;
+  background: #ffffff;
+  cursor: pointer;
+}
+
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 9px;
+  cursor: pointer;
+  background: lightgray;
+  border: 0.2px solid #010101;
+}
+
 }    
